Point and click to add watchers to any comment

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1067,6 +1067,9 @@ en:
     preview:
       close: Hide preview
       preview: Preview
+    watchers:
+      explain: "Click on users to @mention them in your comment. Mentioned users will receive email notifications for your message and others after it."
+      popup_note_html: "Select <b>Notify people</b> to send notifications for this conversation."
   teambox_datas:
     new_import:
       title: "Import data"
