Compact / expanded view for threads
Threads are now expanded by default.
It's possible to contract them or expand them by clicking on the title.
You can also choose the compact mode for a briefer overview.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1189,6 +1189,8 @@ en:
   shared:
     strip:
       archived_html: "This project is archived. To edit or comment on this project you must unarchive it on the <a href='%{link}'>Project Settings page</a>"
+    collapsed_mode: View threads collapsed
+    expanded_mode: View threads expanded
     gantt_banner_primer:
       title: There are no task lists due to show
     upcoming_events_primer:
