--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -174,13 +174,15 @@ es:
       edit_page: "ha editado una página"
       title: "%{user} ha editado la página %{page}"
     thread: 
+      conversation_with_title_html: "%{conversation} en el proyecto %{project}"
+      conversation_without_title_html: "Conversación en el proyecto %{project}"
       created: 
         conversation: "ha creado la conversación"
         task: "ha creado la tarea"
       more_comments: 
         one: "Mostrar un comentario anterior"
         other: "Mostrar %{count} comentarios anteriores"
-      on_task_list: en
+      task_on_task_list_html: "%{task} en la lista de tareas %{task_list}"
   affiliate: 
     area: "Área de Afiliados"
     index: 
@@ -842,7 +844,6 @@ es:
       assigned_to_html: "Asignada a <b>%{user}</b>"
       comment: "Comentario en la pared del proyecto: "
       comments: "%{number} comentarios"
-      converation: "ver esta conversación online"
       conversation: "Conversación:"
       due_on: "Fecha límite: %{date}"
       my_tasks: "Otras tareas tuyas en %{project}"
@@ -857,6 +858,7 @@ es:
       task_commands: "Escribe #resolve, #reject o #hold al principio de tu respuesta para cambiar el estado de la tarea. Escribe #%{username} para asignarla a @%{username}, etc."
       task_link: "ver esta tarea online"
       task_list: "Lista de tareas:"
+      view_this_conversation_online_html: "Puedes %{conversation} para contestar y añadir archivos"
       view_this_task_online_html: "Puedes %{link} para comentar y adjuntar archivos."
     project_membership_notification: 
       project_link: "Haz click en el siguiente para empezar a colaborar en %{project} ahora"
@@ -956,8 +958,6 @@ es:
     week_num: "Semana %{num}"
     week_total: Total
   invitations: 
-    new:
-      also_invite_to_organization: "Invitar también a la organización %{organization}"
     destroy: 
       discarded: "La invitación a %{user} se ha descartado"
     errors: 
@@ -983,6 +983,8 @@ es:
       to_invite: 
         not_example_html: "(Ni <span class=\"mention\">@fred</span> ni <span class=\"mention\">@lisa</span>)"
         title: "Invitarás a"
+    new: 
+      also_invite_to_organization: "Invitar también a la organización '%{organization}'"
     pending: 
       invited_to_join: "%{by} te ha invitado a unirte al proyecto %{project}."
       to_access_or: "para acceder al proyecto o"
@@ -1201,6 +1203,7 @@ es:
       upgrade: "¡Actualiza ahora!"
       yearly_plans: 
         save_with_yearly_plans_html: "<b>Ahorra un 20%</b>. También puedes contratar cualquier plan anual y <b>obtener dos meses gratis</b>. "
+        signup_links_html: "Compra una cuenta anual <a href='%{corporate}'>Corporate ($2990)</a>, <a href='%{pro}'>Pro ($990)</a>, <a href='%{basic}'>Basic ($290)</a> o <a href='%{personal}'>Personal ($120)</a>."
     column: 
       admin_projects: "Gestiona proyectos"
       admin_users: "Gestiona usuarios"
@@ -1480,6 +1483,13 @@ es:
         description: "Actividad en todos tus proyectos"
         title: Teambox
       subscribe: "Suscríbete al feed de actividades"
+    invite_people: 
+      explain_invitations: "Selecciona quien tendra acceso al proyecto. Puedes modificar y añadir miembros mas tarde"
+      invite_by_email: "Invita usuarios añadiendo su dirección de correo electrónico"
+      invite_from_this_organization: "Invitar usuarios que ya están en la organización %{organization}"
+      sending: "Enviando invitaciones..."
+      submit: "Enviar invitaciones y empezar a colaborar"
+      title: "Invitar personas al proyecto %{project}"
     join: 
       welcome: "Ahora eres parte de este proyecto"
     list: 
@@ -1493,10 +1503,9 @@ es:
         one: "Sólo tienes un proyecto activo."
         other: "Tienes %{count} proyectos activos."
         zero: "No tienes proyectos activos."
-      created: "¡Tú proyecto ha sido creado!"
+      explain1_html: "Un proyecto es un grupo compartido con tus colaboradores. Utilízalo para compartir Conversaciones, Tareas y Archivos"
+      explain2_html: "Puedes crear un proyecto para cada área: Desarrolo, Ventar, proyectos de tus clientes, etc."
       invalid_project: "Proyecto no válido, corrige los errores e inténtalo de nuevo."
-      invite_by_email: "Invita a usuarios introduciendo sus direcciones de email"
-      invite_people: "Invitar a usuarios al proyecto"
       new_project: "Nuevo proyecto..."
       not_allowed: "No puedes crear proyectos con tu tipo de cuenta."
       select_an_organization: "Tienes que seleccionar una organización para tu proyecto"
@@ -1509,19 +1518,6 @@ es:
         one: "Puedes crear un proyecto más con tu cuenta."
         other: "Puedes crear %{count} proyectos más con tu cuenta."
         zero_html: "No puedes crear más proyectos.<br/>Sólo puedes tener %{max} proyectos con tu cuenta."
-    new_primer: 
-      define1_html: "Un proyecto es un grupo compartido con tus contactos."
-      define2_html: "Dentro de un proyecto, cada miembro puede:"
-      feature1_html: "Publicar qué está haciendo."
-      feature2_html: "Empezar conversaciones o contestar."
-      feature3_html: "Adjuntar archivos."
-      feature4_html: "Asignar y planificar."
-      feature5_html: "Comentar en tareas."
-      feature6_html: "Hacer <i>time-tracking</i>."
-      feature7_html: "Crear y editar páginas compartidas."
-      footer: "Este proyecto te pertenecerá a ti. Puedes transferirlo a tus contactos en cualquier momento."
-      limited: "En una cuenta gratuita, sólo puedes subir hasta 50 Mb de archivos adjuntos por proyecto."
-      upgrade: "¡Mejora tu cuenta ahora!"
     not_in_project: 
       explain_admin_html: "Para ver este proyecto, debes unirte a él. Así tendrás acceso a las conversaciones, tareas, páginas y archivos. Puedes hacerlo porque eres administrador de la organización <b>%{organization}</b>."
       explain_public_html: "Para ver este proyecto, debes unirte a él. Así tendrás acceso a las conversaciones, tareas, páginas y archivos. Puedes hacerlo porque es un <b>proyecto público</b>."
@@ -1576,6 +1572,7 @@ es:
       submit: "Envíame un email para restablecer mi contraseña"
       title: "¿Ya has perdido la contraseña?"
     reset: 
+      reset_your_password: "Por favor, introduce una nueva contraseña y su confirmación"
       submit: "Cambiar mi contraseña"
       title: "Ahora puedes cambiar tu contraseña"
     sent: 
@@ -2036,7 +2033,7 @@ es:
       title: "Sincroniza tus actividades"
       your_feeds: "Tus feeds de noticias"
     form: 
-      agreement: "Al inscribirte, estás aceptando nuestros %{terms} y %{privacy}."
+      agreement_html: "Registrándote, aceptas nuestros %{terms} i condiciones de %{privacy}"
       betatester: "Utilizar las funciones beta (menos estables) antes de que sean liberadas a la comunidad"
       biography: Biografía
       change_password: "Cambiar contraseña"
