--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -102,7 +102,7 @@ en:
       
     thread:
       conversation_with_title_html: "%{conversation} on %{project} project"
-      conversation_without_title_html: "Conversation on %{project} project"
+      conversation_without_title_html: "<a href='%{conversation_url}'>Conversation</a> on %{project} project"
       task_on_task_list_html: "%{task} on %{task_list} task list"
       more_comments:
         one: "Show one previous comment"
