--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -184,6 +184,7 @@ en:
       sunday: Sunday
       monday: Monday
       betatester: Use beta features (less stable) before they're released.
+      keyboard_shortcuts: Enable keyboard shortcuts. Press 'h' for help when enabled.
       first_day_of_week: Week starts on
       change_password: Change password
       confirm_password: Confirm password
