--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,7 @@ en:
     signup: Sign up
     logged_out: You were logged out
     loading: Loading...
+    download_as_csv: Download as CSV
   confirm:
     delete_task_list: Are you sure you want to delete this task list?
     delete_task: Are you sure you want to delete this task?
