there is no strftime key %i

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1755,7 +1755,7 @@ en:
   time:
     formats:
       default: "%a, %d %b %Y %H:%M:%S %z"
-      short: "%i:%M %p"
+      short: "%I:%M %p"
       long: "%B %d, %Y %H:%M"
     am: "am"
     pm: "pm"
