Added notification window entries for person/teambox_data activities

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1818,4 +1818,9 @@ en:
     entry:
       new_thread_html: New %{thread_url} by %{user_url}
       assigned_to_you_html: You have been assigned a new %{thread_url} by %{user_url}
+      joined_project_html: %{user_url} joined the project %{thread_url}
+      i_joined_project_html: You have joined the project %{thread_url}
+      left_project_html: %{user_url} left the project %{thread_url}
+      i_left_project_html: You have left the project %{thread_url}
+      import_html: %{user_url} has successfully imported thier data into Teambox
       converted_to_task_html: %{record_conversion_url} has been converted to %{thread_url} by %{user_url}
