--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -210,6 +210,7 @@ en:
         notify_conversations: Notify me of updates to conversations I'm watching
         notify_tasks: Notify me of updates to tasks I'm watching
         wants_task_reminder: Send me a daily reminder of tasks assigned to me that are due soon
+        notify_on_mention: Alway send email instantly when someone @mention me
         email_delivery_options: Email delivery options
         digest_delivery_time: "Send task reminder and digest at"
         digest: "Email delivery for project '%{project}'"
