--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1450,6 +1450,8 @@ en:
       due_on: "Due on %{date}"
       status: "Status: %{status}"
       my_tasks: "More tasks assigned to you in %{project}"
+      click_here: click here
+      digest_reply_html: %{click_here_link} to reply online or click %{click_here_email} to reply by email
     upload:
       file: "File:"
     bounce:
