--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -211,6 +211,10 @@ en:
         notify_tasks: Notify me of updates to tasks I'm watching
         wants_task_reminder: Send me a daily reminder of tasks assigned to me that are due soon
         notify_on_mention: Alway send email instantly when someone @mention me
+        watch_options: Watch new tasks and conversations
+        clarification_watch_new_task_or_conversation: "If enabled, you will be added as a watcher for any new task or conversation."
+        watch_new_task: "Watch new tasks on project '%{project}'"
+        watch_new_conversation: "Watch new conversations on project '%{project}'"
         email_delivery_options: Email delivery options
         digest_delivery_time: "Send task reminder and digest at"
         digest: "Email delivery for project '%{project}'"
