Cuter project digests

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1456,9 +1456,10 @@ en:
       due_on: "Due on %{date}"
       status: "Status: %{status}"
       my_tasks: "More tasks assigned to you in %{project}"
-      click_here: click here
-      digest_reply_html: "%{click_here_link} to reply online or click %{click_here_email} to reply by email."
-      digest_reply_text: "Go to %{link} to reply online or reply to %{email}."
+      reply_online: Reply online
+      reply_by_email: Reply by email
+      digest_reply_text: "Go to %{reply_online}."
+      digest_title_html: Activity digest for %{project_link}
     upload:
       file: "File:"
     bounce:
