--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -331,6 +331,13 @@ en:
       tasks_without_a_due_date: "Tasks without a due date"
       you_receive_this_message_html: "You received this message because you opted for it. You can disable it on your %{link}"
       settings_page: "settings page"
+    email_posts:
+      title: "Reply via email"
+      send_replies_with_this_email: "You can send replies to this thread by email. Just email to this address:"
+      teambox_magic_happens: "Teambox will parse your message and attachments and post them to the thread."
+      other_shortcuts_available: "Also, you can use these other handy shortcuts:"
+      will_create_conversation: "will create a new conversation in the project."
+      will_create_task: "will create a new task in the project."
     text_styles:
       block_of_code: Paste your code indented (4 spaces or tabs) to paste it as a block of code.
       enter_this:
@@ -1085,6 +1092,7 @@ en:
     actions:
       confirm_delete: Are you sure you want to delete this comment?
       convert_task: Convert to task
+      post_by_email: Reply via email
       edit: Edit comment
     preview:
       close: Hide preview
