--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1273,10 +1273,10 @@ en:
       people: "People & Permissions"
       my_tasks: My Tasks
       open_my_tasks: Open all my tasks
-      show_all_tasks: View all tasks in my projects...
+      all_tasks: All Tasks
       organizations: Organizations
+      calendars: Calendar
       show_all_organizations: "Manage organizations..."
-      gantt_and_calendars: Gantts and calendars
       show_more: Show more
       show_less: Show less
       affiliate: Affiliate area
