--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -856,7 +856,7 @@ en:
       status: "Status"
     task:
       full_view: Full view
-      hide_comments: Hide comments
+      edit: Edit title
   notes:
     actions:
       delete_confirm: Are you sure you want to delete this note?
