WIP: Introducing the Today tab

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1277,6 +1277,7 @@ en:
       settings: Settings
       people: "People & Permissions"
       my_tasks: My Tasks
+      today: Today
       open_my_tasks: Open all my tasks
       all_tasks: All Tasks
       organizations: Organizations
